# fin

./: Cargo.toml  README.md  TODO.md
installers/: 0xproto  0xproto-nf  adwaita-mono-nf  comic-shanns-mono-nf  cozette  geist  geist-mono-nf  hermit  hubot-sans  hurmit-nf  inter  jetbrains-mono  jetbrains-mono-nf  maple-mono  mona-sans  monaspace  nerd-fonts-symbols-only  opendyslexic-nf  shure-tech-mono-nf  space-mono-nf  terminess-nf
src/: action.rs  args.rs  bar.rs  checksum.rs  colors.rs  config.rs  file_action.rs  font.rs  font_page.rs  installed.rs  installer.rs  lib.rs  main.rs  options.rs  paths.rs  source.rs  tests.rs  wildcards.rs
src/actions/: clean.rs  config.rs  help.rs  install.rs  list.rs  mod.rs  reinstall.rs  remove.rs  update.rs  version.rs
tests/: config_tests.rs  test_action.rs  test_config.rs  test_installer.rs  test_readme.rs  test_wildcards.rs  wildcard_tests.rs
