[package]
name = "fin"
version = "0.2.0"
edition = "2024"

[dependencies]
ctrlc   = { version = "3.4.7",   default-features = false }
flate2  = "1.1.2"
futures = { version = "0.3.31",  default-features = false }
serde   = { version = "1.0.219", default-features = false, features = ["derive"] }
sha2    = { version = "0.10.9",  default-features = false }
tar     = { version = "0.4.44",  default-features = false }
tokio   = { version = "1.0.0",   features = ["rt-multi-thread"] }
zip     = { version = "6.0.0",   default-features = false }

[dependencies.toml]
version = "0.9.5"
default-features = false
features = ["parse", "serde", "display"] 

[dependencies.reqwest]
version = "0.12.23"
default-features = false
features = ["blocking", "stream", "rustls-tls"]
