[package]
name = "fin"
version = "0.2.0"
edition = "2024"

[dependencies]
ctrlc   = { version = "3.4.7",   default-features = false }
flate2  = "1.1.2"
futures = { version = "0.3.31",  default-features = false }
serde   = { version = "1.0.219", default-features = false, features = ["derive"] }
sha2    = { version = "0.10.9",  default-features = false }
tar     = { version = "0.4.44",  default-features = false }
tokio   = { version = "1.0.0",   features = ["rt-multi-thread"] }

[dependencies.zip]
version = "7.0.0"
default-features = false
features = [
  "bzip2",
  "deflate",
  "deflate64",
  "deflate-flate2",
  "deflate-zopfli",
  "lzma",
  "ppmd",
  "xz",
  "zstd",
] 

[dependencies.toml]
version = "0.9.5"
default-features = false
features = ["parse", "serde", "display"] 

[dependencies.reqwest]
version = "0.12.23"
default-features = false
features = ["blocking", "stream", "rustls-tls"]

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[profile.release.package."*"]
codegen-units = 1
debug = false
strip = true
